# LeftTree

./: CMakeLists.txt  README.md
cmake/: LeftTreeConfig.cmake.in
examples/: basic.cpp
include/LeftTree/: LeftTree.hpp  LeftTreeSerialization.hpp
src/: LeftTree.cpp
testing/: LeftTree_test.cpp
